add the data initialization API, but exit bug
